--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: oklch(0.2 0.01 270);
+}
+
 #chessboard {
   display: grid;
   grid-template: repeat(7, 40px) / repeat(7, 40px);
