--- a/src/style.css
+++ b/src/style.css
@@ -38,3 +38,7 @@ body {
 #chessboard > div:nth-child(even) {
   background-color: hsl(30, 80%, 83%);
 }
+
+#chessboard > .possible-move {
+  border: 3px solid lightseagreen;
+}
